--- a/.github/workflows/pre-commit-check.yml
+++ b/.github/workflows/pre-commit-check.yml
@@ -11,4 +11,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v3
+    - name: Install pre-commit
+      run: |
+        pip install pre-commit
+    - name: Install requirements
+      run: |
+        pip install -r requirements.txt
     - uses: pre-commit/action@v3.0.0
