--- a/.github/workflows/pre-commit-check.yml
+++ b/.github/workflows/pre-commit-check.yml
@@ -12,6 +12,10 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.8'
+      - name: Install requirements
+        run: |
+          python -m pip install --upgrade pip
+          pip install pre-commit
       - name: Install pre-commit
         run: pip install pre-commit
       - name: Run pre-commit
