--- a/.github/workflows/pre-commit-check.yml
+++ b/.github/workflows/pre-commit-check.yml
@@ -15,9 +15,7 @@ jobs:
       - name: Install requirements
         run: |
           python -m pip install --upgrade pip
-          pip install pre-commit
-      - name: Install pre-commit
-        run: pip install pre-commit
+          pip install -r requirements.txt
       - name: Run pre-commit
         run: pre-commit run --all-files
       
