--- a/.github/workflows/pre-commit-check.yml
+++ b/.github/workflows/pre-commit-check.yml
@@ -17,6 +17,17 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run pre-commit
-        run: pre-commit run --all-files
-      
+        run: pre-commit run #--all-files
+      - name: Merge to main
+        if: success()
+        uses: actions/checkout@v2
+        with:
+          ref: main
+      - name: Merge to main
+        if: success()
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git merge --no-edit origin/develop
+          git push
 
