--- a/.github/workflows/pre-commit-check.yml
+++ b/.github/workflows/pre-commit-check.yml
@@ -26,10 +26,10 @@ jobs:
       - name: Merge to main
         if: success()
         run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
+          git config --global user.email "anthonyperinah@gmail.com"
+          git config --global user.name "Anthony Pernia"
           git merge --no-edit origin/develop
           git push
-          
+
         
 
