--- a/.github/workflows/pre-commit-check.yml
+++ b/.github/workflows/pre-commit-check.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           git config --global user.email "anthonyperinah@gmail.com"
           git config --global user.name "Anthony Pernia"
-          git merge --no-edit origin/develop
+          git merge develop
           git push
 
         
