--- a/.github/workflows/pre-commit-check.yml
+++ b/.github/workflows/pre-commit-check.yml
@@ -1,4 +1,5 @@
-#run pre-commit checks on pull requests if pre-commit ends ok, the pull request is merged
+#run pre-commit checks on pull requests if pre-commit ends ok, the pull request will be merged 
+#token is in TOKEN_GIT
 on:
   push:
     branches:
@@ -19,17 +20,13 @@ jobs:
       - name: Run pre-commit
         run: pre-commit run #--all-files
       - name: Merge to main
-        if: success()
-        uses: actions/checkout@v2
-        with:
-          ref: main
-      - name: Merge to main
-        if: success()
         run: |
-          git config --global user.email "anthonyperinah@gmail.com"
-          git config --global user.name "Anthony Pernia"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git checkout main
           git merge develop
           git push
+
 
         
 
