--- a/.github/workflows/pre-commit-check.yml
+++ b/.github/workflows/pre-commit-check.yml
@@ -20,12 +20,16 @@ jobs:
       - name: Run pre-commit
         run: pre-commit run #--all-files
       - name: Merge to main
-        run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
-          git checkout main
-          git merge develop
-          git push
+        uses: peter-evans/create-pull-request@v3
+        with:
+          token: ${{ secrets.TOKEN_GIT }}
+          commit-message: Merge to main
+          title: Merge to main
+          body: Merge to main
+          branch: main
+          base: main
+          delete-branch: true
+          labels: auto-merge
 
 
         
