--- a/.github/workflows/pre-commit-check.yml
+++ b/.github/workflows/pre-commit-check.yml
@@ -16,7 +16,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run pre-commit
-        run: pre-commit run #--all-files
+        run: pre-commit run --all-files
       - name: Merge to main
         uses: peter-evans/create-pull-request@v3
         if: success()
